@@ -202,6 +202,19 @@ class DecidirPlusTest < Test::Unit::TestCase
     assert_success response
   end
 
+  def test_successful_purchase_with_wallet_id
+    wallet_id = 'moto'
+    options = @options.merge(wallet_id:)
+
+    response = stub_comms(@gateway, :ssl_request) do
+      @gateway.purchase(@amount, @payment_reference, options)
+    end.check_request do |_action, _endpoint, data, _headers|
+      assert_equal(wallet_id, JSON.parse(data)['wallet_id'])
+    end.respond_with(successful_purchase_response)
+
+    assert_success response
+  end
+
   def test_successful_purchase_with_aggregate_data
     aggregate_data = {
       indicator: '1',
