@@ -98,6 +98,7 @@
 * Braintree: Add support for stored credentials with Apple Pay [bdcano] #5336
 * FlexCharge: Update homePage url [javierpedrozaing] #5351
 * Nuvei: Fix send savePM in false by default [javierpedrozaing] #5353
+* Decidir and DecicirPlus: Add the wallet_id field [yunnydang] #5354
 
 == Version 1.137.0 (August 2, 2024)
 * Unlock dependency on `rexml` to allow fixing a CVE (#5181).
